--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-react-template",
+  "name": "todo-react-template-with-motion",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
